# percept

./: Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/client/src/: batcher.rs  client.rs  error.rs  event.rs
crates/core/src/: descriptor.rs  error.rs  id.rs  kind_ref.rs  lib.rs
crates/ingest/src/: lib.rs  metrics.rs  schema.rs  wire.rs
crates/ingest/src/mqtt/: mod.rs  router.rs
crates/ingest/tests/: http_e2e.rs
crates/percept/: Cargo.toml
crates/percept-client/: Cargo.toml
crates/percept-client/src/: blocking.rs  lib.rs
crates/percept-client/tests/: round_trip.rs
crates/percept-core/: Cargo.toml
crates/percept-core/src/: event.rs  time.rs
crates/percept-ingest/: Cargo.toml
crates/percept-ingest/src/: auth.rs  http.rs  lib.rs  metrics.rs  normalizer.rs  pipeline.rs  ws.rs
crates/percept-ingest/src/mqtt/: decode.rs  subscriber.rs  topic.rs
crates/percept-ingest/tests/: http_e2e.rs  ws_e2e.rs
crates/percept-store/: Cargo.toml
crates/percept-store/src/: hot_ring.rs  lib.rs
crates/percept-store/src/cold/: store.rs  writer.rs
crates/percept-store/src/vector/: embedder.rs  index.rs  task.rs
crates/percept/src/: cli.rs  forwarder.rs  lib.rs  main.rs  server.rs  sweeper.rs
crates/percept/src/config/: mod.rs  schema.rs  secrets.rs  validate.rs
crates/percept/src/mcp/: mod.rs  peer.rs  protocol.rs  registry.rs  router.rs  tools.rs
crates/percept/tests/: config_load.rs  federation_e2e.rs  mcp_e2e.rs  retention_e2e.rs
crates/store/src/cold/: cursor.rs  mod.rs
crates/store/src/retention/: mod.rs  policy.rs  sweeper.rs
crates/store/src/vector/: index.rs  mod.rs  selector.rs  truncate.rs
docs/: CI.md  DECISIONS.md  DESIGN.md  PLAN.md  sample.percept.toml
