[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/wowow4978-vorfeed/percept"
version = "0.1.0"

[workspace.dependencies]
percept-core = { path = "crates/percept-core" }
percept-store = { path = "crates/percept-store" }
percept-ingest = { path = "crates/percept-ingest" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"

# Async / HTTP / pipeline (Slice 1)
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
bytes = "1"
parking_lot = "0.12"
globset = "0.4"
governor = "0.6"
jsonschema = { version = "0.17", default-features = false }

# Test-only
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
