[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/wowow4978-vorfeed/percept"
version = "0.1.0"

[workspace.dependencies]
percept-core = { path = "crates/core" }
percept-store = { path = "crates/store" }
percept-ingest = { path = "crates/ingest" }
percept-client = { path = "crates/client" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"

# Async / HTTP / pipeline (Slice 1)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "decompression-gzip"] }
bytes = "1"
parking_lot = "0.12"
globset = "0.4"
governor = "0.6"
jsonschema = { version = "0.17", default-features = false }

# Adapters (slice 6)
rumqttc = "0.24"
# jsonpath-rust is RFC 9535-compliant. We previously tried serde_json_path
# but 0.6.x has an internal crate-split version mismatch with its macros
# crate that the resolver can't untangle.
jsonpath-rust = "0.7"
flate2 = "1"

# Cold store (slice 3)
#
# DESIGN.md Appendix A names DuckDB as the cold-store engine. v1 ships with
# rusqlite instead — same query surface (SQL with cursor-friendly indexes),
# 30 s compile vs DuckDB-bundled's 9 min, and a few MB on disk vs ~4 GB per
# build directory. The DuckDB switch is a v2 perf concern; SQLite handles
# the edge-profile 1M-event acceptance target comfortably.
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
blake3 = "1"
ciborium = "0.2"
base64 = "0.22"

# Test-only
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
