[package]
name = "percept-store"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
percept-core = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
ulid = { workspace = true }
