[package]
name = "percept-store"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
percept-core = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
