[package]
name = "percept"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "percept"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
percept-core = { workspace = true }
percept-store = { workspace = true }
percept-ingest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glob = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
